--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>My App</title>
+    <title>YOLO</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -15,15 +15,15 @@
     <script src="js/app.min.js"></script>
   </head>
   <body ng-app="MyApp" ng-controller="MainController">
-
-    <!-- Sidebars -->
+<!--
+    <!-- Sidebars --
     <div ng-include="'sidebar.html'" 
             ui-track-as-search-param='true'
             class="sidebar sidebar-left"></div>
 
     <div class="app">
 
-      <!-- Navbars -->
+      <!-- Navbars --
 
       <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
@@ -49,15 +49,18 @@
         </div>
       </div>
 
-      <!-- App Body -->
+      <!-- App Body --
       <div class="app-body">
         <div class="app-content">
           <ng-view></ng-view>  
         </div>
       </div>
 
-    </div><!-- ~ .app -->
+    </div>>!-- ~ .app --
 
     <div ui-yield-to="modals"></div>
+    -->
+    <ui-switch  ng-model="invoice.paid"></ui-switch>
+
   </body>
 </html>
