--- a/front/app/index.html
+++ b/front/app/index.html
@@ -25,7 +25,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Dropsnij Drina team</p>
       </div>
     </div>
 
