--- a/front/app/index.html
+++ b/front/app/index.html
@@ -23,9 +23,9 @@
     <div ng-view=""></div>
     </div>
 
-    <div class="footer">
+    <div id="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Dropsnij Drina team</p>
+       <span class="glyphicon glyphicon-heart"></span> from the Dropsnij Drina team</p>
       </div>
     </div>
 
